Fixed Functionality to adding symptoms and added padding to body to provide gap between container of form and the footer

--- a/SymptomsPage/SymptomsPage.css
+++ b/SymptomsPage/SymptomsPage.css
@@ -4,8 +4,11 @@ form {
 }
 
 .wrapper {
+    margin: auto;
     margin-top: 5%;
     position: relative;
+    width: 80%;
+    height: 80%;
 }
 
 .form-row {
@@ -18,14 +21,15 @@ html {
     min-height: 100%;
   }
   body {
+    padding-bottom: 30px; 
     margin-bottom: 50px; /* Margin bottom by footer height */
   }
   .footer {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
     height: 65px; /* Set the fixed height of the footer here */
-    line-height: 60px; /* Vertically center the text there */
+    line-height: 50px; /* Vertically center the text there */
     background-color: #666;
   }
   
@@ -40,6 +44,9 @@ html {
 
 .copyright {
     color: white;
+    padding: 10px;
+    margin-bottom: -50px;
+    height: 65px;
 }
   
 
